# json-parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.json  build_apidoc.py
doc/: Doxyfile
example/: CMakeLists.txt  main.cpp
example/weather-station-client/: config.json  main.cpp
src/: CMakeLists.txt  json.cppm
test/: CMakeLists.txt  test_json.cpp
